[package]
name = "syner_derive"
version = "0.3.0"
edition = "2021"
authors = ["Leon Camus <leon.c@gmx.de>"]
keywords = ["proc_macro", "procmacro", "syn", "syner", "derive"]
description = "A procedural macro to generate a parser for attributes from a struct"
license = "MIT"
readme = "../README.md"
repository = "https://github.com/28Smiles/syner"

[lib]
proc-macro = true

[dependencies]
quote = "1"
proc-macro2 = "1"
syn = "1"
